Update x96q pro so that netbooting via internal phy can happen
Needs hacks to ethernet driver which hasn't been delivered yet.

--- a/arch/arm/dts/sun50i-h313-x96q-pro.dts
+++ b/arch/arm/dts/sun50i-h313-x96q-pro.dts
@@ -14,6 +14,10 @@
 	compatible = "sunnzo,x96q-pro", "allwinner,sun50i-h313";
 
 	aliases {
+		mmc0 = &mmc0;
+		mmc1 = &mmc1;
+		mmc2 = &mmc2;
+		ethernet0 = &emac1;
 		serial0 = &uart0;
 	};
 
@@ -43,9 +47,35 @@
 	status = "okay";
 };
 
+&emac1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&rmii_pins>;
+	phy-mode = "rmii";
+	phy-handle = <&rmii_phy>;
+	phy-supply = <&reg_aldo1>;
+	allwinner,rx-delay-ps = <3100>;
+	allwinner,tx-delay-ps = <700>;
+	status = "okay";
+};
+
+&mdio1 {
+	rmii_phy: ethernet-phy@0 {
+		compatible = "ethernet-phy-ieee802.3-c22";
+		reg = <0>;
+	};
+};
+
 &mmc0 {
 	vmmc-supply = <&reg_dldo1>;
 	cd-gpios = <&pio 5 6 GPIO_ACTIVE_LOW>;	/* PF6 */
+	broken-cd;
+	bus-width = <4>;
+	status = "okay";
+};
+
+&mmc1 {
+	vmmc-supply = <&reg_dldo1>;
+	broken-cd;
 	bus-width = <4>;
 	status = "okay";
 };
