--- a/configs/x96q_pro_defconfig
+++ b/configs/x96q_pro_defconfig
@@ -29,6 +29,9 @@ CONFIG_AXP313_POWER=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_MUSB_GADGET=y
+CONFIG_SUPPORT_EMMC_BOOT=y
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_SECTOR=0x40
+CONFIG_MMC_SUNXI_SLOT_EXTRA=2
 #ADDED FOR NET BOOTING
 CONFIG_USB_HOST_ETHER=y
 CONFIG_USB_ETHER_ASIX=y
